# duti

./: .gitignore  CNAME  COPYRIGHT  EXCLUDE  Makefile.in  README  README.md  VERSION  aclocal.m4  configure  configure.ac  dh.1  dh.c  dh.h  documentation.html  duti-nav.html  duti.1  duti.1.html  duti.c  duti.css  handler.c  handler.h  index.html  license.html  plist.c  plist.h  util.c  util.h  version.c.in
.github/workflows/: makefile.yml
pkg-resources/: Description.plist  Info.plist  License.rtf  ReadMe.rtf  Welcome.rtf
